# prettylog

./: README.md  pyproject.toml  rotation_test.log.1  rotation_test.log.2
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: lastfailed
examples/: basic_usage.py  bind_example.py  config_example.py  meme.py  rotation_example.py
src/prettylog/: __init__.py  config.py  formatters.py  handlers.py  logger.py
src/prettylog.egg-info/: PKG-INFO  SOURCES.txt
tests/prettylog/: __init__.py  test_config.py  test_formatters.py  test_handlers.py  test_init.py  test_logger.py
